--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
